# BetterIntegralConstant

./: .gitignore  CMakeLists.txt  README.md
cmake/: BICConfig.cmake.in  bic.pc.in
demo/: CMakeLists.txt  demo_Array.cpp  demo_axpy.cpp  demo_enumerateTuple.cpp  demo_isFixed.cpp
include/BIC/: Core.hpp  Fixed.hpp  FixedArray.hpp  FixedArrayElement.hpp  Formater.hpp  IsFixed.hpp  Loops.hpp  MutOrFixed.hpp  Mutable.hpp  Reversed.hpp  Seq.hpp
include/BIC/misc/: ComparableTo.hpp
